Added better sample data with unique identifiers; status and method strings now enumerated; testing now operational
