# nodejs-server/service/ReferralService.js
@@ -2,19 +2,6 @@
 
 
 /**
- * Deletes a referral from the system
- *
- * referralId Long ID of referral to delete
- * no response value expected for this operation
- **/
-exports.deleteReferral = function(referralId) {
-  return new Promise(function(resolve, reject) {
-    resolve();
-  });
-}
-
-
-/**
  * Fetch a referral by id including its referee, status, link, and method
  *
  * referralId Long ID of a referral to return
@@ -24,11 +11,12 @@ exports.getReferral = function(referralId) {
   return new Promise(function(resolve, reject) {
     var examples = {};
     examples['application/json'] = {
-  "referer" : "123",
+  "referer" : "10",
+  "code" : "XFCDOB",
   "method" : "text",
   "link" : "https://cartoncaps.link/abfilefa90p?referral_code=referral_code",
-  "id" : "123",
-  "referee" : "123",
+  "id" : "1",
+  "referee" : "11",
   "status" : "Complete"
 };
     if (Object.keys(examples).length > 0) {
