# openapi.yaml
@@ -4,36 +4,27 @@ info:
   description: |
       # Introduction
       This API allows Carton Caps users to refer friends to install the CC app on their mobile device, and utilizes deferred deep links to customize the installation experience for the referred user.
-
       # OpenAPI Specification
       This API is documented in **OpenAPI format** and is based on the
-      [Petstore sample](https://petstore.swagger.io/) provided by the [swagger.io](https://swagger.io) team.
-      
+      [Petstore sample](https://petstore.swagger.io/) provided by the [swagger.io](https://swagger.io) team.     
       # Documentation
       Full API documentation can be referenced [here](https://editor.swagger.io/?url=https://raw.githubusercontent.com/joshua-d-hill/carton-caps-referral-api/master/openapi.yaml)
-  
       # Installation and testing
       Testing servers stubs and client SDKs have been generated using [Swagger Codegen](https://swagger.io/docs/open-source-tools/swagger-codegen/)
-      
       # Skills Challenge Questions
       Q: How will existing users create new referrals using their existing referral code?
       A: The CC app would POST to the /referrals endpoint with data matching the referral schema (see below).
-      
       Q: How will the app generate referral links for the share feature?
       A: The app would make a request to the third-party vendor for deferred deep link support.  This link would be included in the POST to the /referrals endpoint.
-      
       Q: How will existing users check the status of their referrals?
       A: The app would make a GET request to the /referrals endpoint with a filter on the user's referrer ID.
-      
       Q: How will the app know where to direct new users after they install the app via a referral?
       A: The deferred deep link provided by the third-party vendor would direct new users to the "You've Been Invited" gate page after they have installed the Carton Caps application.
-      
       Q: Since users may eventually earn rewards for referrals, should we take extra steps to mitigate abuse?
       A: This might be addressed in three ways, depending on client preference and in escalating severity: 
       - generate a new referral code (for example, if a user posted their code on a discount-sharing website)
       - disable the "share" feature for the offending user
       - disable the app credentials for the offending user
-      
   termsOfService: https://livefront.com/terms/
   contact:
     name: Joshua Hill
@@ -100,8 +91,7 @@ paths:
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/referral'
-          
+                $ref: '#/components/schemas/referral'         
   /referrals/{referralId}:
     get:
       operationId: getReferral
@@ -166,12 +156,7 @@ paths:
       responses:
         '400':
           description: Invalid referral ID
-        
 components:
-  securitySchemes:
-    BasicAuth:
-      type: http
-      scheme: basic
   schemas:
     referral:
       type: object
@@ -179,33 +164,49 @@ components:
         id:
           type: string
           description: id
-          example: '123'
+          example: "1"
         referee:
           type: string
           description: ID of referred user
-          example: '123'
+          example: "10"
         referer:
           type: string
           description: ID of referring user
-          example: '123'
+          example: "11"
         code:
           type: string
           description: six-character referral code
-          example: 'XFCDOB'
+          example: XFCDOB
         status:
           type: string
-          description: Status of referral - Sent, Received, Complete
-          example: 'Complete'
+          enum: [Sent, Received, Complete]
+          description: >
+            Status of referral:
+             * `Sent` - Referer has referred a user
+             * `Received` - Referee has received the referral but not yet installed the app
+             * `Complete` - Referee has installed the app and resolved the deferred deep link
+          example: Complete
         link:
           type: string
-          description: The deferred deep link used by the referee to install the app and view the 'You've Been Invited' gate screen
-          example: 'https://cartoncaps.link/abfilefa90p?referral_code=referral_code'
-        method: 
+          description: The deferred deep link used by the referee to install the app
+            and view the 'You've Been Invited' gate screen
+          example: https://cartoncaps.link/abfilefa90p?referral_code=referral_code
+        method:
           type: string
-          description: Method used to create referral - text, email, share
-          example: 'text'
-security:
-  - BasicAuth: []
+          description: >
+            Method used to create referrals: 
+            * `Text` - Referral was sent to a mobile number
+            * `Email` - Referral was sent to an email address
+            * `Share` - Referral was sent via system-provided share capabilities
+          example: Text
+      example:
+        referer: "11"
+        code: XFCDOB
+        method: text
+        link: https://cartoncaps.link/abfilefa90p?referral_code=referral_code
+        id: "1"
+        referee: "10"
+        status: Complete
 tags:
   - name: referral
     description: Update or delete a single referral; requires referral ID.
